<resources>
    <string name="app_name">Whatsapp Clone</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="sign_up_with_phone">Sign Up with phone</string>
    <string name="signin">signin</string>
    <string name="click_for_signup">Click for Signup</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="your_web_client_id">155031488126-q4b8935vs12i7m5jg0niu8a7bc59d9jk.apps.googleusercontent.com</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="todo">TODO</string>
    <string name="enter_your_message">Message</string>
    <string name="group_chat">Group Chats</string>
    <string name="about">About</string>
    <string name="save">Save</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="about_us">About Us</string>
    <string name="invite_a_friend">Invite a Friend</string>
    <string name="notification">Notification</string>
    <string name="help">Help</string>
    <string name="enter_your_name">Enter Your Name</string>
</resources>