<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/grayBackground"
    tools:context=".SignInActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:orientation="vertical" >

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:src="@drawable/whatsapp_image"/>


        <EditText
            android:id="@+id/etemail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="15dp"
            android:background="@color/white"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="9dp" />

        <EditText
            android:id="@+id/etpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="9dp" />

        <TextView
            android:id="@+id/clickSignup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/click_for_signup"
            android:padding="3dp"
            android:layout_gravity="end"/>

        <Button
            android:id="@+id/btn_signin"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:padding="15dp"
            android:text="@string/signin"
            app:cornerRadius="4dp" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:layout_weight="2"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_google"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:drawableLeft="@drawable/google_image"
                android:padding="15dp"
                android:layout_marginRight="4dp"
                android:backgroundTint="@color/white"
                android:textColor="@color/black"
                android:text="@string/google"
                app:cornerRadius="4dp" />

            <Button
                android:id="@+id/btn_facebook"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:drawableLeft="@drawable/facebook_image"
                android:padding="15dp"
                android:layout_marginLeft="4dp"
                android:backgroundTint="@color/fb_color"
                android:textColor="@color/white"
                android:text="@string/facebook"
                app:cornerRadius="4dp" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <TextView
            android:id="@+id/signupphone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up_with_phone"
            android:layout_gravity="center"
            android:textSize="18sp"
            android:textColor="@color/colorPrimary"
            android:layout_marginTop="15dp"/>


    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>