<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".SettingActivity">


    <ImageView
        android:id="@+id/backArrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        app:srcCompat="@drawable/baseline_arrow_back_24"
        android:contentDescription="@string/todo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/backArrow"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:gravity="center"
        android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_100sdp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/profile"
            android:contentDescription="@string/todo" />

        <ImageView
            android:id="@+id/plus"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginStart="37dp"
            android:layout_marginTop="-30dp"
            app:srcCompat="@drawable/plus" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/username"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:textColorLink="@color/colorPrimary"
                android:hint="@string/enter_your_name"
                android:inputType="textPersonName"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:importantForAutofill="no" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView1"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/about"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etAbout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/about"
                android:inputType="textPersonName"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/saveBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_savebtn"
            android:padding="5dp"
            android:text="@string/save"
            android:textColor="@color/colorPrimary" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="40dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_linearlayout"
        android:layout_alignParentBottom="true">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:drawablePadding="15dp"
            android:padding="10dp"
            android:text="@string/privacy_policy"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:drawableTint="@color/colorPrimary"
            app:drawableStartCompat="@drawable/baseline_privacy_tip_24" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:drawablePadding="15dp"
            android:padding="10dp"
            android:text="@string/about_us"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:drawableTint="@color/colorPrimary"
            app:drawableStartCompat="@drawable/information" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:drawablePadding="15dp"
            android:padding="10dp"
            android:text="@string/invite_a_friend"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:drawableTint="@color/colorPrimary"
            app:drawableStartCompat="@drawable/addfriend" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:drawablePadding="15dp"
            android:padding="10dp"
            android:text="@string/notification"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:drawableTint="@color/colorPrimary"
            app:drawableStartCompat="@drawable/baseline_notifications_active_24" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:drawablePadding="15dp"
            android:padding="10dp"
            android:text="@string/help"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:drawableTint="@color/colorPrimary"
            app:drawableStartCompat="@drawable/baseline_help_24" />
    </LinearLayout>

</RelativeLayout>